[gd_scene load_steps=17 format=2]

[ext_resource path="res://shared/fonts/Bebas Neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/ui/GameEnd.gd" type="Script" id=2]
[ext_resource path="res://shared/gui_leaderboard/gui_leaderboard.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=14]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 1 )

[node name="GameEnd" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 743.0
margin_top = 340.0
margin_right = 1177.0
margin_bottom = 740.0

[node name="GameOver" type="Label" parent="CenterContainer/HBoxContainer"]
margin_right = 434.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1

[node name="Stats" type="Label" parent="CenterContainer/HBoxContainer"]
margin_top = 159.0
margin_right = 434.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 2 )
text = "Score:  
Words Cleared: "
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer"]
margin_top = 322.0
margin_right = 434.0
margin_bottom = 400.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HBoxContainer/CenterContainer"]
margin_left = 83.0
margin_right = 350.0
margin_bottom = 78.0
custom_constants/separation = 60

[node name="RetryButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/HBoxContainer2"]
margin_right = 123.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 5 )
text = "Retry"

[node name="ExitButton" type="Button" parent="CenterContainer/HBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 183.0
margin_right = 267.0
margin_bottom = 78.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 10 )
text = "Exit"

[node name="ClearedWords" type="Label" parent="."]
margin_left = 1376.0
margin_top = 232.0
margin_right = 1810.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 14 )
text = "Cleared Words"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 1497.0
margin_top = 360.0
margin_right = 1698.0
margin_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
margin_right = 57.0
margin_bottom = 1047.0

[node name="Label" type="Label" parent="ScrollContainer/CenterContainer"]
margin_right = 57.0
margin_bottom = 1047.0
custom_fonts/font = SubResource( 13 )
text = "Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
Word
"

[node name="LeaderboardGUI" parent="." instance=ExtResource( 3 )]
margin_left = 183.0
margin_top = 244.0
margin_right = 183.0
margin_bottom = 244.0

[connection signal="button_up" from="CenterContainer/HBoxContainer/CenterContainer/HBoxContainer2/RetryButton" to="." method="_on_RetryButton_button_up"]
[connection signal="button_up" from="CenterContainer/HBoxContainer/CenterContainer/HBoxContainer2/ExitButton" to="." method="_on_ExitButton_button_up"]
